syntax = "proto3";

package transactions_proto;

option go_package = "./transactions_proto";

message RequestCreateTransaction {
  string from = 1;
  string to = 2;
  double amount = 3;
  int32 type_id = 4;
  string data = 5;
  repeated File files = 6;
}

message File {
  int32 id_file = 1;
  string name = 2;
  string file_encode = 3;
  string name_aws = 4;
}

message Attribute {
  int32 id = 1;
  string name = 2;
  string value = 3;
}

message ResponseCreateTransaction {
  bool error = 1;
  Transaction data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message Transaction {
  string id = 1;
  string from = 2;
  string to = 3;
  double amount = 4;
  int32 type_id = 5;
  string data = 6;
  int64 block = 7;
  string files = 8;
  string created_at = 9;
  string updated_at = 10;
}

message GetTransactionByIdRequest {
  string id = 1;
}

message GetTransactionsByIdsRequest {
  repeated string id = 1;
}

message ResponseGetTransactionsByIds {
  bool error = 1;
  repeated Transaction data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message ResponseGetTransactionById {
  bool error = 1;
  Transaction data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message GetAllTransactionsRequest {
  int64 limit = 1;
  int64 offset = 2;
  int64 block_id = 3;
}

message ResponseGetAllTransactions {
  bool error = 1;
  repeated Transaction data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message GetFilesByTransactionRequest {
  string transaction_id = 1;
}

message ResponseGetFilesByTransaction {
  bool error = 1;
  repeated FilesResponse data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message FilesResponse {
  string name_document = 1;
  string encoding = 2;
  int32 file_id = 3;
}

message RqGetTransactionByBlock {
  int64 block_id = 1;
}

message ResponseGetTransactionByBlock {
  bool error = 1;
  repeated Transaction data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

message RqCreateTransactionBySystem {
  string wallet_from = 1;
  string wallet_to = 2;
  double amount = 3;
  int32 type_id = 4;
  string data = 5;
  int64 block_id = 6;
}

message ResCreateTransactionBySystem{
  bool error = 1;
  Transaction data = 2;
  int32 code = 3;
  int32 type = 4;
  string msg = 5;
}

service transactionsServices {
  rpc CreateTransaction(RequestCreateTransaction) returns (ResponseCreateTransaction){}
  rpc GetTransactionByID(GetTransactionByIdRequest) returns (ResponseGetTransactionById){}
  rpc GetTransactionsByIDs(GetTransactionsByIdsRequest) returns (ResponseGetTransactionsByIds){}
  rpc GetAllTransactions(GetAllTransactionsRequest) returns (ResponseGetAllTransactions){}
  rpc GetFilesTransaction(GetFilesByTransactionRequest) returns (ResponseGetFilesByTransaction){}
  rpc GetTransactionsByBlockId(RqGetTransactionByBlock) returns (ResponseGetTransactionByBlock){}
  rpc CreateTransactionBySystem(RqCreateTransactionBySystem) returns (ResCreateTransactionBySystem){}
}
